--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -1,6 +1,20 @@
 
-
-
-<% @drugs.each do |drug| %>
-  <p> <%= drug.drug_name %> </p>
-<% end %>
+<div class="container">
+  <h1>Teddies</h1>
+  <div class="row">
+    <% @drugs.each do |drug| %>
+      <div class="col-6 col-md-4">
+        <div class="card">
+          <%= image_tag drug.photo_url , class: "card-img-top" %>
+          <div class="card-body">
+            <h5 class="card-title"><%= drug.name_name %></h5>
+            <p class="card-text"><%= drug.type %></p>
+          <!--   funciona el drug type como filtro ? -->
+          <p>Amount: <%= humanized_money_with_symbol(drug.price) %></p>
+            <%= link_to "More details", drug_path(drug), class: "btn btn-primary" %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
