--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <h1>Teddies</h1>
+  <h1>Drug</h1>
   <div class="row">
     <% @drugs.each do |drug| %>
       <div class="col-6 col-md-4">
