--- a/app/views/drugs/show.html.erb
+++ b/app/views/drugs/show.html.erb
@@ -7,7 +7,7 @@
     <div class="col-sm-12 col-md-6">
       <h1><%= @drug.drug_name %></h1>
       <p>Some awesome description of our amazing teddy.</p>
-      <p>Amount: <%= humanized_money_with_symbol(@drugs.price) %></p>
+      <p>Amount: <%= humanized_money_with_symbol(@drug.price_cents) %></p>
     </div>
   </div>
 </div>
