--- a/app/assets/stylesheets/components/_card_drug.scss
+++ b/app/assets/stylesheets/components/_card_drug.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Signika&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 /*colors*/
 
@@ -20,7 +21,7 @@ $grey: #b3b3b3 ;
   margin-top: 30px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 70%;
+  width: 90%;
 }
 
 .cards .card_2, .cards .card {
@@ -37,7 +38,7 @@ $grey: #b3b3b3 ;
     margin: auto;
     margin: 5px;
     box-shadow: 0px 0px 6px 2px rgb(238, 238, 238);
-    font-family: 'Signika', sans-serif;
+    font-family: 'Montserrat';
     @media screen and (min-width: 700px) {
         min-width: 300px;
         max-width: 300px;
@@ -84,6 +85,7 @@ $grey: #b3b3b3 ;
         font-weight: 100;
         justify-content: space-between;
         .card_2_btn{
+            font-family: 'Montserrat';
             width: 100px;
             padding: 10px;
             border-radius: 4px;
