--- a/app/views/drugs/show.html.erb
+++ b/app/views/drugs/show.html.erb
@@ -1,13 +1,31 @@
-<div class="container py-3">
-  <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <%= image_tag(@drug.image, width: '100%') %>
-    <!--   como se si esta cargando la imagen aqui ? -->
+<div class="card_qty" >
+    <div class="card_qty_content" >
+        <div class="" >
+            <%= image_tag @drug.image , class: "card_qty_img" %>
+        </div>
+        <div class="card_qty_texts" >
+            <h1 class="card_qty_title"><%= @drug.drug_name %></h1>
+            <h4 class="card_qty_sub" ><%= @drug.description %></h4>
+            <h2 class="card_qty_price" ><%= humanized_money_with_symbol(@drug.price_cents) %></h2>
+            <div class="card_qty_cart" >
+                <div class="qty_selector" > - <span class="qty">1</span> +</div>
+                <button class="button button_fill_primary" >Agregar</button>
+            </div>
+    <div class="card_qty_line" ></div>
+    <div class="card_qty_content_footer" >
+        <div class="footer_item_1" >
+            <span class="icon" >icon</span>
+            <div class="texts" >
+                <h5>Above title here</h5>
+            </div>
+        </div>
+        <div class="footer_item_2" >
+            <span class="icon" >icon</span>
+            <div class="texts" >
+                <h5>Above title here</h5>
+            </div>
+       </div>
     </div>
-    <div class="col-sm-12 col-md-6">
-      <h1><%= @drug.drug_name %></h1>
-      <p><%= @drug.description %></p>
-      <p>Amount: <%= humanized_money_with_symbol(@drug.price_cents) %></p>
-    </div>
-  </div>
+</div>
+</div>
 </div>
