--- a/app/assets/stylesheets/components/_card_drug.scss
+++ b/app/assets/stylesheets/components/_card_drug.scss
@@ -54,8 +54,10 @@ $grey: #b3b3b3 ;
             margin-top: 50px;
             font-size: 20px;
             color: black;
-            line-height: 1;
             font-weight: 200;
+            line-height: 1;
+            height: 2.6em;
+            overflow: hidden;
         }
         .card_2_sub{
             color: $theblue;
