--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -51,3 +51,14 @@
   <% end %>
 </div>
 
+
+<div class="mt-3 mb-3 d-flex justify-content-center" >
+  <div class="digg_pagination ">
+    <%= will_paginate @drugs, :container => false , :previous_label => 'Anterior', :next_label => 'Siguiente' %>
+  </div>
+
+</div>
+
+
+
+
